# edxFP101

./: Notes.org
basics/: .gitignore  basics.cabal  input.txt  package.yaml  stack.yaml  test.csv  test.json  x.txt
basics/src/: Composition.hs  JSONModel.hs  NewType.hs  Records.hs  YesNo.hs
basics/test/: BasicsTest.hs  DListSpec.hs  Main.hs  MonadLawsSpec.hs  QC.hs
cmd-line-to-do-list/: README.md  cmd-line-to-do-list.cabal  stack.yaml
cmd-line-to-do-list/app/: Main.hs
cmd-line-to-do-list/src/: Commands.hs  Helpers.hs  Parsers.hs  Types.hs
code/: Countdown10.hs  HW9.hs  Hangman8.hs  TypesNClass9.hs  churchNumerals.hs  countdown.lhs  test.hs  w3Ex.hs
edx-fp101/: Notes.org
edx-fp101/code/: FPMonads.hs  HW6.hs  InteractivePrograms8.hs  LazyEval11.hs  ListOperations10.hs  Reasoning.hs  parsing.hs  w3DefiningFunctions.hs  w4ListComprehension.hs  w5Recursive.hs  w6HOF.hs
edx-fp101/labs/: lab2.hs  lab4.hs  pmctemplate.hs  template-lab6.hs
haskell-restish-todo/: Makefile  package.yaml
haskell-restish-todo/app/: Main.hs
haskell-restish-todo/src/: Components.hs  Config.hs  SQLLite.hs  Types.hs
labs/: lab3.hs
learn-servant/: .gitignore  ChangeLog.md  README.md  package.yaml
learn-servant/src/: Server.hs
lyhfgg/: ChangeLog.md  README.md  package.yaml  stack.yaml
lyhfgg/src/: JSONClass.hs  JSONModel.hs  Prettify.hs  Shape.hs  (+4 more)
notes/: cat-thoery-for-programmers.org  category-theory.org  haskell-basics.org  learning-resources.org
scotty-app/: ChangeLog.md  Dockerfile  README.md  package.yaml  scotty-app.cabal  stack.yaml
users-api/: users-api.cabal
(+122 files in other folders)
