name:                cmd-line-to-do-list
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cmd-line-to-do-list#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       ,optparse-applicative
  default-language:    Haskell2010

executable cmd-line-to-do-list-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative  
                     , cmd-line-to-do-list
  default-language:    Haskell2010

test-suite cmd-line-to-do-list-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cmd-line-to-do-list
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cmd-line-to-do-list
